--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,2 +1,64 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+.nav-nav{
+  background-color: #009933;
+}
+a, .linki{
+  color: white;
+  font-size: 18px;
+}
+a:hover{
+  color: #black;
+}
+.btn-here{
+  background-color: #ff3333;
+  color: white;
+}
+
+.div-packs{
+  background-color: #e6e6e6;
+  padding: 50px 0;
+}
+.btn-packs{
+  background-color: #009933;
+  color: white;
+}
+
+ul li {
+  list-style:none;
+}
+ul li img {
+  cursor: pointer;
+  width: 100%;
+  border-radius: 25px;
+}
+.gallery-row{
+  margin: 50px 0;
+  padding: 50px 0;
+}
+
+/*footer*/
+iframe{
+  margin: 50px 0;
+}
+.div-about{
+  background-color: #e6e6e6;
+}
+.foo-reserved{  
+  color: #009933;
+}
+.contact{
+  padding: 100px;
+}
+
+
+
+.carousel-inner > .item > img,
+  .carousel-inner > .item > a > img {
+      width: 70%;
+      margin: auto;
+  }
+
+
+
