home semi complete

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -4,6 +4,9 @@
 .nav-nav{
   background-color: #009933;
 }
+.div-home{
+  margin: 350px 0;
+}
 a, .linki{
   color: white;
   font-size: 18px;
@@ -24,6 +27,9 @@ a:hover{
   background-color: #009933;
   color: white;
 }
+.div-gallery{
+  background-color: #ff3333;
+}
 
 ul li {
   list-style:none;
@@ -31,7 +37,7 @@ ul li {
 ul li img {
   cursor: pointer;
   width: 100%;
-  border-radius: 25px;
+  margin: 0 0 100px 0;
 }
 .gallery-row{
   margin: 50px 0;
@@ -62,3 +68,121 @@ iframe{
 
 
 
+/*Icons social*/
+
+@font-face {
+  font-family: 'icomoon';
+  src:  url('fonts/icomoon.eot?4jx6lw');
+  src:  url('fonts/icomoon.eot?4jx6lw#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?4jx6lw') format('truetype'),
+    url('fonts/icomoon.woff?4jx6lw') format('woff'),
+    url('fonts/icomoon.svg?4jx6lw#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+
+.icon-mail2:before {
+  content: "\ea84";
+}
+
+.icon-google:before {
+  content: "\ea88";
+}
+.icon-google2:before {
+  content: "\ea89";
+}
+.icon-google3:before {
+  content: "\ea8a";
+}
+.icon-facebook:before {
+  content: "\ea90";
+}
+.icon-whatsapp:before {
+  content: "\ea93";
+}
+
+
+
+
+
+/* menu social */
+*{
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing:border-box;
+}
+.social{
+  position: left;
+  left: 0;
+  top: 200px;
+  z-index: 2000;
+  position: fixed;
+}
+.social ul{
+  list-style: none;
+}
+.social ul li a{
+  display: inline-block;
+  color: #fff;
+  background: #000;
+  padding: 10px 15px;
+  text-decoration: none;
+  transition:all 500ms ease;
+}
+.social ul li .icon-facebook{
+  background-color: #3b5998;
+}
+.social ul li .icon-whatsapp{
+  background-color: #34AF23
+}
+.social ul li .icon-mail2{
+  background-color: #ff4343
+}
+
+.social ul li a:hover{
+  padding: 10px 10px 10px 150px;
+}
+
+
+/*Video back*/
+video { 
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    opacity: 0.9;
+    transform: translateX(-50%) translateY(-50%);
+    background-size: cover;
+    transition: 1s opacity;
+}
+
+
+@media screen and (max-width: 500px) { 
+  div{width:70%;} 
+}
+@media screen and (max-device-width: 800px) {
+  html { background: url(https://thenewcode.com/assets/images/polina.jpg) #000 no-repeat center center fixed; }
+  #bgvid { display: none; }
+}
