--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,10 +12,10 @@
     <nav class=" nav-nav">
       <div class="container-fluid">
         <ul class="nav navbar-nav">
-          <li><%= link_to "Inicio",   '#', :class=>"linki" %></li>
-          <li><%= link_to "Paquetes",   '#', :class=>"linki" %></li>
-          <li><%= link_to "Gallery", '#', :class=>"linki" %></li>
-          <li><%= link_to "About", '#', :class=>"linki" %></li>
+          <li><%= link_to "Inicio", { controller: "partys", action: "index" } %></li>
+          <li><%= link_to "Paquetes", { controller: "packages", action: "index" } %></li>
+          <li><%= link_to "Gallery", { controller: "partys", action: "index" } %></li>
+          <li><%= link_to "About", { controller: "partys", action: "index" } %></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li><%= link_to "Login", '#', :class=>"linki" %></li>
