--- a/app/views/partys/index.html.erb
+++ b/app/views/partys/index.html.erb
@@ -54,7 +54,7 @@
 
 
 
-<div class="col-xs-12 div-gallery container">
+<div id="div-gallery" class="col-xs-12 div-gallery container">
   <br>
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
@@ -69,16 +69,16 @@
       <div class="item active">
         <ul class="gallery-row">
         <li class="">
-            <%= image_tag("02.jpg", class: "col-xs-3") %>
+            <%= image_tag("02.jpg", onclick: "imgclick()" ,class: "col-xs-3") %>
         </li>
         <li class="">
-            <%= image_tag("02.jpg", class: "col-xs-3") %>
+            <%= image_tag("02.jpg", onclick: "imgclick()" , class: "col-xs-3") %>
         </li>
         <li class="">
-            <%= image_tag("02.jpg", class: "col-xs-3") %>
+            <%= image_tag("02.jpg", onclick: "imgclick()" , class: "col-xs-3") %>
         </li>
         <li class="">
-            <%= image_tag("02.jpg", class: "col-xs-3") %>
+            <%= image_tag("02.jpg", onclick: "imgclick()" , class: "col-xs-3") %>
         </li>
     </ul>
       </div>
@@ -86,16 +86,16 @@
       <div class="item">
         <ul class="gallery-row">
         <li class="">
-            <%= image_tag("02.jpg", class: "col-xs-3") %>
+            <%= image_tag("02.jpg", onclick: "imgclick()" , class: "col-xs-3") %>
         </li>
         <li class="">
-            <%= image_tag("02.jpg", class: "col-xs-3") %>
+            <%= image_tag("02.jpg", onclick: "imgclick()" , class: "col-xs-3") %>
         </li>
         <li class="">
-            <%= image_tag("02.jpg", class: "col-xs-3") %>
+            <%= image_tag("02.jpg", onclick: "imgclick()" , class: "col-xs-3") %>
         </li>
         <li class="">
-            <%= image_tag("02.jpg", class: "col-xs-3") %>
+            <%= image_tag("02.jpg", onclick: "imgclick()" , class: "col-xs-3") %>
         </li>
     </ul>
       </div>
@@ -103,16 +103,16 @@
       <div class="item">
         <ul class="gallery-row">
         <li class="">
-            <%= image_tag("02.jpg", class: "col-xs-3") %>
+            <%= image_tag("02.jpg", onclick: "imgclick()" , class: "col-xs-3") %>
         </li>
         <li class="">
-            <%= image_tag("02.jpg", class: "col-xs-3") %>
+            <%= image_tag("02.jpg", onclick: "imgclick()" , class: "col-xs-3") %>
         </li>
         <li class="">
-            <%= image_tag("02.jpg", class: "col-xs-3") %>
+            <%= image_tag("02.jpg", onclick: "imgclick()" , class: "col-xs-3") %>
         </li>
         <li class="">
-            <%= image_tag("02.jpg", class: "col-xs-3") %>
+            <%= image_tag("02.jpg", onclick: "imgclick()" , class: "col-xs-3") %>
         </li>
     </ul>
       </div>
@@ -126,7 +126,7 @@
 
 
 
-<div class="div-about col-xs-12 ">
+<div id="div-about" class="div-about col-xs-12 ">
   <iframe class="col-xs-offset-1 col-xs-6" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3734.908182579527!2d-101.17793108475776!3d20.5918069079263!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842c84d9a015b219%3A0x1788951ab4955a5f!2sPaseo+de+Las+Playas+140%2C+Las+Reynas%2C+36720+Salamanca%2C+Gto.!5e0!3m2!1ses!2smx!4v1489540331335" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
   <div class="contact col-xs-offset-1 col-xs-4">
     <h4 >Contacto: </h4>
