--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,19 +10,43 @@
 
   <body>
     <nav class=" nav-nav">
+      
       <div class="container-fluid">
         <ul class="nav navbar-nav">
-          <li><%= link_to "Inicio",   '#', :class=>"linki" %></li>
+          <li><%= link_to "Inicio",   root_path, :class=>"linki" %></li>
           <li><%= link_to "Paquetes",   '#', :class=>"linki" %></li>
           <li><%= link_to "Gallery", '#', :class=>"linki" %></li>
           <li><%= link_to "About", '#', :class=>"linki" %></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><%= link_to "Login", '#', :class=>"linki" %></li>
-          <li><%= link_to "Logout", '#', :class=>"linki" %></li>
+          <% if logged_in? %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              Cuenta <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Perfil", current_user, :class=>"linki" %></li>
+              <li><%= link_to "Actualizar", edit_user_path(current_user), :class=>"linki"%></li>
+              <li>
+                <%= link_to "Salir", logout_path, method: "delete", :class=>"linki" %>
+              </li>
+            </ul>
+          </li>
+        <% else %>        
+          <li><%= link_to "Entrar",  login_path , :class=>"linki" %></li>
+          <li><%= link_to "Registrarse", signup_path, :class=>"linki" %></li>
+       
+        <% end %>
         </ul>
       </div>
     </nav>
+    <div class="container">
+        <% flash.each do |message_type, message| %>
+          <div class="alert alert-<%= message_type %>"><%= message %></div>
+        <% end %>
+      </div> 
     <%= yield %>
   </body>
 </html>
+
+
