--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,11 +1,11 @@
-<h1> Restablecer Mi Contraseña</h1>
+<h1>Password reset</h1>
 
-<p>Para restablecer tu contraseña, haz click en link de abajo</p>
+<p>To reset your password click the link below:</p>
 
-<%= link_to "Restablecer Contraseña", edit_password_reset_url(@user.reset_token,
+<%= link_to "Reset password", edit_password_reset_url(@user.reset_token,
                                                       email: @user.email) %>
 
-<p>Este link expira en 2 horas.</p>
+<p>This link will expire in two hours.</p>
 
 <p>
 If you did not request your password to be reset, please ignore this email and
