--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -1,9 +1,8 @@
-Para restablecer tu contraseña, haz click en link de abajo
+To reset your password click the link below:
 
 <%= edit_password_reset_url(@user.reset_token, email: @user.email) %>
 
-
-Este link expira en 2 horas.
+This link will expire in two hours.
 
 If you did not request your password to be reset, please ignore this email and
 your password will stay as it is.
