--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,6 @@
 
   <body>
     <nav class=" nav-nav">
-      
       <div class="container-fluid">
         <ul class="nav navbar-nav">
           <li><%= link_to "Inicio",   root_path, :class=>"linki" %></li>
@@ -20,6 +19,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <% if logged_in? %>
+           <li><%= link_to "Carrito",  '#', :class=>"linki" %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Cuenta <b class="caret"></b>
@@ -27,9 +27,7 @@
             <ul class="dropdown-menu">
               <li><%= link_to "Perfil", current_user, :class=>"linki" %></li>
               <li><%= link_to "Actualizar", edit_user_path(current_user), :class=>"linki"%></li>
-              <li>
-                <%= link_to "Salir", logout_path, method: "delete", :class=>"linki" %>
-              </li>
+              <li><%= link_to "Salir", logout_path, method: "delete", :class=>"linki" %></li>
             </ul>
           </li>
         <% else %>        
