--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,10 @@
-
+<h3>Historial de compras del usuario</h3>
 <div class="row">
   <aside class="col-md-4">
     <section class="user_info">
-      <h1>
-        <%= gravatar_for @user %>
+      <h3>
         <%= @user.name%>
-      </h1>
+      </h3>
     </section>
   </aside>
 </div>
