--- a/app/views/partys/index.html.erb
+++ b/app/views/partys/index.html.erb
@@ -138,3 +138,28 @@
    <h5 class="text-center col-xs-12"><strong>Todos los derechos reservados 2017 de Todo para tu fiesta es una marca registrada</strong></h5>
 
 </div>
+
+
+</div>
+
+
+
+<div id="modal2">
+    <div class="modalconent">
+        <h2>Eres mayor de edad?</h2>
+        <a href="https://www.google.com.mx/"><button id="button">No</button></a>
+       <button id="button" onclick="indexModal()">Sí</button>
+    </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
