--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,17 +2,22 @@
 <html>
   <head>
     <title>AllParty</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
   </head>
 
-  <body>
+<body>
     <nav class=" nav-nav">
       <div class="container-fluid">
         <ul class="nav navbar-nav">
-          <li><%= link_to "Inicio", { controller: "partys", action: "index" }, class: "link_nav" %></li>
+          <li><%= link_to "Inicio",{ controller: "partys", action: "index" }, class: "link_nav" %></li>
           <li><%= link_to "Paquetes", { controller: "packages", action: "index" }, class: "link_nav" %></li>
           <li><%= link_to "Gallery", { controller: "partys", action: "index" }, class: "link_nav" %></li>
           <li><%= link_to "About", { controller: "partys", action: "index" }, class: "link_nav" %></li>
@@ -23,6 +28,8 @@
         </ul>
       </div>
     </nav>
-    <%= yield %>
+   
+      <%= yield %>
+
   </body>
 </html>
