--- a/app/views/packages/index.html.erb
+++ b/app/views/packages/index.html.erb
@@ -1,8 +1,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
+  
+  
+<div id="app1" ng-app="myApp" ng-controller="myController">
 <div class="container">
   <h2 class="text-center">Elige la opciòn deseada y arma tu paquete</h2>
   <br><br><br>
@@ -11,26 +10,33 @@
     <li><a data-toggle="tab" href="#menu1">Paquete Cerveza</a></li>
     <li><a data-toggle="tab" href="#menu2">Paquete Asado</a></li>
   </ul>
-
+  <h1 class="total_text col-md-offset-8">Monto: $ {{(((((num_person_mix * num_glass_mix)/2)/30*1200)+(num_person_mix *180))+(((num_person * num_glass)/2)/30*1200)+(total*180))}}.00 mxn</h1>
   <div class="tab-content">
     <div id="home" class="tab-pane fade in active">
       <h3 class="text-center">Arma tu paquete Mix</h3>
       <div class="col-xs-6 col-md-offset-1">
         <%= form_for(:package, url: packages_path) do |f| %>
           <%= f.label "Numero de personas para tu evento:" %>
-          <%= f.text_field :persons, class: 'form-control' %>
+          <%= f.text_field :persons, "ng-model" => "num_person_mix", class: 'form-control' %>
           <br>
           <%= f.label "Numero de vasos de 500ml por persona(aprox):" %>
-          <%= f.text_field :glass_person, class: 'form-control' %><br>
+          <%= f.text_field :glass_person, "ng-model" => "num_glass_mix", class: 'form-control' %><br>
+          <%= f.label "Elige el tamaño para tus vasos:" %><br> 
+            <%= f.radio_button :size, "small", checked: "checked", :class => '' %> 16 Oz (355ml)        
+            <%= f.radio_button :size, "medium", :class => '' %> 24 Oz (425ml)
+            <%= f.radio_button :size, "big", :class => '' %> 32 Oz (750ml)
+            <br><br>
+            <br><br>
           <h4>Todos los paquetes incluyen: </h4>
           <p>Entrada: Naranja, jìcama y pepino con salsas. <br>Chicharron con guacamole y quesadillas con chistorra.</p>
           <p>Segundo tiempo: Frijoles charros.</p> 
           <p>Arrachera con sirloin o rib eye(a elegir a continuación).Incluye un porción de chorizo, cebolla y chile asado, además de salsas y tortillas a mano.</p> <br>
         <%= f.label "Elige el corte con el que acompañaras tu Arrachera" %><br> 
-          <%= f.radio_button :meat, true, :class => '' %> Sirloin
-          <%= f.radio_button :meat, false, :class => '' %> Rib Eye
+          <%= f.radio_button :meat, "sirloin", checked: "checked", :class => '' %> Sirloin
+          <%= f.radio_button :meat, "ribeye", :class => '' %> Rib Eye
           <br><br>
           <p>El peso del corte es de 330 gr.El evento incluye meseros, asi como bebidas(refrescos y aguas de sabor).</p><br>
+          <br><br>
           <%= f.submit "Comprar Paquete", :class => "btn-submit-pack" %>
         <% end %>
       </div>
@@ -38,36 +44,45 @@
     <div id="menu1" class="tab-pane fade">
       <h3 class="text-center">Arma tu paquete Cerveza</h3>
       <div class="col-xs-6 col-md-offset-1">
-        <%= form_for(:package, url: packages_path) do |f| %>
-          <%= f.label "Numero de personas para tu evento:" %>
-          <%= f.text_field :persons, class: 'form-control' %><br>
-          <%= f.label "Numero de vasos de 500ml por persona(aprox):" %>
-          <%= f.text_field :glass_person, class: 'form-control' %><br>
-          <br>
-          <%= f.submit "Comprar Paquete", :class => "btn-submit-pack" %>
-        <% end %>
+          <%= form_for(:package, url: packages_path) do |f| %>
+            <%= f.label "Numero de personas para tu evento:" %>
+            <%= f.text_field :persons, "ng-model" => "num_person", class: 'form-control' %><br>
+            <%= f.label "Numero de vasos de 500ml por persona(aprox):" %>
+            <%= f.text_field :glass_person, "ng-model" => "num_glass", class: 'form-control' %><br>
+            <br>
+            <%= f.label "Elige el tamaño para tus vasos:" %><br> 
+            <%= f.radio_button :size, "small",checked: "checked", :class => '' %> 16 Oz (355ml)        
+            <%= f.radio_button :size, "medium", :class => '' %> 24 Oz (425ml)
+            <%= f.radio_button :size, "big", :class => '' %> 32 Oz (750ml)
+            <br><br>
+            <br><br>
+            <%= f.submit "Comprar Paquete", :class => "btn-submit-pack" %>
+          <% end %>
       </div>
     </div>
     <div id="menu2" class="tab-pane fade">
       <h3 class="text-center">Arma tu paquete Asado</h3>
       <div class="col-xs-6 col-md-offset-1">
-        <%= form_for(:package, url: packages_path) do |f| %>
-          <%= f.label "Numero de personas para tu evento:" %>
-          <%= f.text_field :persons, class: 'form-control' %>
-          <br>
-          <h4>Todos los paquetes incluyen: </h4>
-          <p>Entrada: Naranja, jìcama y pepino con salsas. <br>Chicharron con guacamole y quesadillas con chistorra.</p>
-          <p>Segundo tiempo: Frijoles charros.</p> 
-          <p>Arrachera con sirloin o rib eye(a elegir a continuación).Incluye un porción de chorizo, cebolla y chile asado, además de salsas y tortillas a mano.</p> <br>
-        <%= f.label "Elige el corte con el que acompañaras tu Arrachera" %><br> 
-          <%= f.radio_button :meat, true, :class => '' %> Sirloin
-          <%= f.radio_button :meat, false, :class => '' %> Rib Eye
-          <br><br>
-          <p>El peso del corte es de 330 gr.El evento incluye meseros, asi como bebidas(refrescos y aguas de sabor).</p><br>
-          
-          <%= f.submit "Comprar Paquete", :class => "btn-submit-pack" %>
+          <%= form_for(:package, url: packages_path) do |f| %>
+            <%= f.label "Numero de personas para tu evento:" %>
+            <%= f.text_field :persons, "ng-model" => "total", class: 'form-control' %>
+            <br>
+            <h4>Todos los paquetes incluyen: </h4>
+            <p>Entrada: Naranja, jìcama y pepino con salsas. <br>Chicharron con guacamole y quesadillas con chistorra.</p>
+            <p>Segundo tiempo: Frijoles charros.</p> 
+            <p>Arrachera con sirloin o rib eye(a elegir a continuación).Incluye un porción de chorizo, cebolla y chile asado, además de salsas y tortillas a mano.</p> <br>
+          <%= f.label "Elige el corte con el que acompañaras tu Arrachera" %><br> 
+            <%= f.radio_button :meat, "sirloin", checked: "checked", :class => '' %> Sirloin
+            <%= f.radio_button :meat, "ribeye", :class => '' %> Rib Eye
+            <br><br>
+            <p>El peso del corte es de 330 gr.El evento incluye meseros, asi como bebidas(refrescos y aguas de sabor).</p><br>
+
+            <br><br>
+            <%= f.submit "Comprar Paquete", :class => "btn-submit-pack" %>
         <% end %>
       </div>
     </div>
   </div>
+  </div>
+
 </div>
