--- a/app/views/packages/index.html.erb
+++ b/app/views/packages/index.html.erb
@@ -1,7 +1,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   
-<div id="app1" ng-app="myApp" ng-controller="myController">
 <div class="container">
   <h2 class="text-center">Elige la opciòn deseada y arma tu paquete</h2>
   <br><br><br>
@@ -10,17 +9,16 @@
     <li><a data-toggle="tab" href="#menu1">Paquete Cerveza</a></li>
     <li><a data-toggle="tab" href="#menu2">Paquete Asado</a></li>
   </ul>
-  <h1 class="total_text col-md-offset-8">Monto: $ {{(((((num_person_mix * num_glass_mix)/2)/30*1200)+(num_person_mix *180))+(((num_person * num_glass)/2)/30*1200)+(total*180))}}.00 mxn</h1>
   <div class="tab-content">
     <div id="home" class="tab-pane fade in active">
       <h3 class="text-center">Arma tu paquete Mix</h3>
       <div class="col-xs-6 col-md-offset-1">
         <%= form_for(:package, url: packages_path) do |f| %>
           <%= f.label "Numero de personas para tu evento:" %>
-          <%= f.text_field :persons, "ng-model" => "num_person_mix", class: 'form-control' %>
+          <%= f.text_field :persons, class: 'form-control' %>
           <br>
           <%= f.label "Numero de vasos de 500ml por persona(aprox):" %>
-          <%= f.text_field :glass_person, "ng-model" => "num_glass_mix", class: 'form-control' %><br>
+          <%= f.text_field :glass_person, class: 'form-control' %><br>
           <%= f.label "Elige el tamaño para tus vasos:" %><br> 
             <%= f.radio_button :size, "small", checked: "checked", :class => '' %> 16 Oz (355ml)        
             <%= f.radio_button :size, "medium", :class => '' %> 24 Oz (425ml)
@@ -48,7 +46,7 @@
             <%= f.label "Numero de personas para tu evento:" %>
             <%= f.text_field :persons, "ng-model" => "num_person", class: 'form-control' %><br>
             <%= f.label "Numero de vasos de 500ml por persona(aprox):" %>
-            <%= f.text_field :glass_person, "ng-model" => "num_glass", class: 'form-control' %><br>
+            <%= f.text_field :glass_person, class: 'form-control' %><br>
             <br>
             <%= f.label "Elige el tamaño para tus vasos:" %><br> 
             <%= f.radio_button :size, "small",checked: "checked", :class => '' %> 16 Oz (355ml)        
@@ -65,7 +63,7 @@
       <div class="col-xs-6 col-md-offset-1">
           <%= form_for(:package, url: packages_path) do |f| %>
             <%= f.label "Numero de personas para tu evento:" %>
-            <%= f.text_field :persons, "ng-model" => "total", class: 'form-control' %>
+            <%= f.text_field :persons, class: 'form-control' %>
             <br>
             <h4>Todos los paquetes incluyen: </h4>
             <p>Entrada: Naranja, jìcama y pepino con salsas. <br>Chicharron con guacamole y quesadillas con chistorra.</p>
@@ -82,7 +80,6 @@
         <% end %>
       </div>
     </div>
-  </div>
   </div>
 
 </div>
