--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -222,11 +222,6 @@ video {
 }
 
 
-<<<<<<< HEAD
-
-
-
-
 /*modal*/
 
 #modal2 {
@@ -252,7 +247,7 @@ video {
 
 
 /*packs*/
-=======
+
 /* sidebar */
 
 aside {
@@ -393,5 +388,36 @@ p{
   line-heigth: 1.7em;
 }
 
->>>>>>> c9081a57060910e5234a41662c3cfd98773c8598
+.hidden { display: none; }
+
+/*flash*/
+
+.alert-error {
+background-color: #f2dede;
+border-color: #eed3d7;
+color: #b94a48;
+text-align: left;
+}
+
+.alert-alert {
+background-color: #f2dede;
+border-color: #eed3d7;
+color: #b94a48;
+text-align: left;
+}
+
+.alert-success {
+background-color: #dff0d8;
+border-color: #d6e9c6;
+color: #468847;
+text-align: left;
+}
+
+.alert-notice {
+background-color: #dff0d8;
+border-color: #d6e9c6;
+color: #468847;
+text-align: left;
+}
+
 
