--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,16 +1,15 @@
 <div align="center">
   <h3>Send A message to Us</h3>
 
-  <%= simple_form_for @contact, :html => {:class => 'form-horizontal' } do |f| %>
-    <%= f.input :name, :required => true %>
-    <%= f.input :email, :required => true %>
-    <%= f.input :message, :as => :text, :required => true %>
+  <%= form_for @contact, :html => {:class => 'form-horizontal' } do |f| %>
+    <%= f.text_field :name, :required => true, class: 'form-control' %>
+    <%= f.text_field :email, :required => true, class: 'form-control'%>
+    <%= f.text_field :message, :as => :text, :required => true, class:'form-control' %>
     <div class= "hidden">
-      <%= f.input :nickname, :hint => 'Leave this field blank!' %>
+      <%= f.text_field :nickname, :hint => 'Leave this field blank!' %>
     </div>
     <div>
       </br>
-      <%= f.button :submit, 'Send message', :class=> "btn btn-primary" %>
+      <%= f.submit "Enviar Mensaje", class: "btn btn-primary" %>
     </div>
-  <% end %>
 </div>
