--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -418,14 +418,13 @@ background-color: #dff0d8;
 border-color: #d6e9c6;
 color: #468847;
 text-align: left;
-<<<<<<< HEAD
-}
-=======
 }
 
 
 
-/*PAgofacil*/
+/*Pago*/
+
+
 body {
     background: url("http://www.pagofacil.net/wp-content/themes/TheCorporation/images/header_tile.png") repeat scroll center top white;
     color: #000000;
@@ -739,7 +738,3 @@ table {
 #pais {
     width: 159px;
 }
-
-
-
->>>>>>> 495f2788fb267e939f5fb2641300fa8212758ffc
