--- a/app/views/user_mailer/account_activation.html.erb
+++ b/app/views/user_mailer/account_activation.html.erb
@@ -1,6 +1,6 @@
 <h1>Todo para tu Fiesta</h1>
 
-<p>hi <%=@user.name %>, </p>
+<p>Hola, <%=@user.name %>, </p>
 
 <p>
  Bienvenido a "Todo para Tu Fiesta App!, haz click en el link de abajo para activar tu cuenta:
