--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Detalles de tu compra</h1>
 <br><br><br><br>
-<<<<<<< HEAD
+
 <h3 class="text-left col-md-offset-2">Numero de personas:  <%= @details.persons%> personas</h3>
 <%if @details.glass_person%>
   <h3 class="text-left col-md-offset-2">Numero de vasos por persona:  <%= @details.glass_person %> vasos aproximadamente</h3>
@@ -15,7 +15,8 @@
   <br><br><br>
 
   <div class="col-xs-5 col-md-offset-2 ">
-    <%= form_for :ticket , url: package_tickets_path do |f| %>
+    <%= form_for @reservation, url: package_tickets_path do |f| %>
+      <%= render 'shared/error_reservation'%>
       <%= f.label "El servicio esta a nombre de:" %>
       <%= f.text_field :name, class: 'form-control' %>
       <br>
@@ -23,7 +24,7 @@
       <%= f.text_field :address, class: 'form-control' %>
       <br>
       <%= f.label "Fecha del evento:" %>
-      <%= f.date_field :date, class: '' %>
+      <%= f.date_field :date, class: 'form-control' %>
       <br><br>
       <%= f.label "Hora del evento:" %>
       <%= f.time_field :time, class: 'form-control' %>
@@ -31,16 +32,14 @@
       <%= f.label "Nùmero telefònico:" %>
       <%= f.text_field :phone, class: 'form-control' %>
       <br>
-      <%= f.hidden_field :status, value: "seleccionado", class: 'form-control' %>
-      <%= f.hidden_field :total, value: @details.total, class: 'form-control' %>
+      <%= f.hidden_field :status, value: "seleccionado" %>
       <br><br>
-      <%= f.check_box :checkbox, class: 'col-xs-1' %> Soy mayor de edad
-      <br><br>
-      <%= f.submit "Comprar Paquete", :class => "btn-submit-pack", :total=> @details ,data: { confirm: 'Esta usted seguro?' } %>
+      <%= f.submit "Comprar Paquete", :class => "btn-submit-pack", :total => @details ,data: { confirm: 'Esta usted seguro?' } %>
+    
     <% end %>
   </div>
 
-=======
+
 <h3 class="text-left col-md-offset-2">Numero de personas:  <%= @details[:persons]%> personas</h3>
 <%if @details[:glass_person]%>
   <h3 class="text-left col-md-offset-2">Numero de vasos por persona:  <%= @details[:glass_person] %> vasos aproximadamente</h3>
@@ -52,4 +51,4 @@
 <%end%>
 
   <h3 class="text-left col-md-offset-2">El total de tu compra es: <%= @total%>.00 mxn</h3>
->>>>>>> e67bc5bf1f2bc2c7dbdfa817d49d58142e5695c5
+
