validate and send email

--- a/app/views/shared/_error_reservation.html.erb
+++ b/app/views/shared/_error_reservation.html.erb
@@ -1,10 +1,10 @@
-<% if @reservation.errors.any? %>
+<% if :ticket.errors.any? %>
   <div id="error_explanation">
     <div class= "alert alert-danger">
-      The form contains <%= pluralize(@reservation.errors.count, "error") %>.
+      The form contains <%= pluralize(:ticket.errors.count, "error") %>.
     </div>
     <ul>
-      <% @reservation.errors.full_messages.each do |msg| %>
+      <% :ticket.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
     </lu>
