--- a/app/views/partys/index.html.erb
+++ b/app/views/partys/index.html.erb
@@ -124,50 +124,31 @@
   </div>
 </div>
 
-
-
-
 <div id="div-about" class="div-about col-xs-12 ">
   <iframe class="col-xs-offset-1 col-xs-4" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3734.908182579527!2d-101.17793108475776!3d20.5918069079263!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842c84d9a015b219%3A0x1788951ab4955a5f!2sPaseo+de+Las+Playas+140%2C+Las+Reynas%2C+36720+Salamanca%2C+Gto.!5e0!3m2!1ses!2smx!4v1489540331335" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
   <div class="contact col-xs-offset-1 col-xs-4">
     <h3>Contacto<h3>
     <%= form_for Contact.new, :html => {:class => 'form-horizontal' } do |f| %>
-<<<<<<< HEAD
-    
-=======
->>>>>>> c288aab1a0d56fee3403ad6651650cda2c8140ec
+    <%= f.label "Nombre:" %> 
     <%= f.text_field :name, :required => true, class: 'form-control' %>
+    <%= f.label "Email:" %> 
     <%= f.text_field :email, :required => true, class: 'form-control'%>
+    <%= f.label "Mensaje:" %>     
     <%= f.text_field :message, :as => :text, :required => true, class:'form-control' %>
     <div class= "hidden">
       <%= f.text_field :nickname, :hint => 'Leave this field blank!' %>
     </div>
     <div>
       </br>
-<<<<<<< HEAD
       <%= f.submit "Enviar Mensaje", class: "btn btn-primary" %>
     </div>
-=======
-      <%= f.submit 'Send message', :class=> "btn btn-primary" %>
-    
->>>>>>> c288aab1a0d56fee3403ad6651650cda2c8140ec
   <% end %>
-
   </div>
    <h5 class="text-center col-xs-12"><strong>Todos los derechos reservados 2017 de Todo para tu fiesta es una marca registrada</strong></h5>
 
 </div>
-<<<<<<< HEAD
 </div>
-
-
-
-
-=======
-
-
 </div>
->>>>>>> c288aab1a0d56fee3403ad6651650cda2c8140ec
 
 
 
