--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -1,9 +1,5 @@
 <h1>Detalles de tu compra</h1>
 <br><br><br><br>
-<<<<<<< HEAD
-
-=======
->>>>>>> c288aab1a0d56fee3403ad6651650cda2c8140ec
 <h3 class="text-left col-md-offset-2">Numero de personas:  <%= @details.persons%> personas</h3>
 <%if @details.glass_person%>
   <h3 class="text-left col-md-offset-2">Numero de vasos por persona:  <%= @details.glass_person %> vasos aproximadamente</h3>
@@ -18,31 +14,32 @@
   <br><br><br>
 
   <div class="col-xs-5 col-md-offset-2 ">
-    <%= form_for @reservation, url: package_tickets_path do |f| %>
-      <%= render 'shared/error_reservation'%>
+    <%= form_for :ticket, url: package_tickets_path do |f| %>
       <%= f.label "El servicio esta a nombre de:" %>
-      <%= f.text_field :name, class: 'form-control' %>
+      <%= f.text_field :name, :required => true, class: 'form-control' %>
       <br>
       <%= f.label "Direcciòn del evento:" %>
-      <%= f.text_field :address, class: 'form-control' %>
+      <%= f.text_field :address, :required => true, class: 'form-control' %>
       <br>
       <%= f.label "Fecha del evento:" %>
-      <%= f.date_field :date, class: 'form-control' %>
+      <%= f.date_field :date, :required => true, class: '' %>
       <br><br>
       <%= f.label "Hora del evento:" %>
-      <%= f.time_field :time, class: 'form-control' %>
+      <%= f.time_field :time, :required => true, class: 'form-control' %>
       <br>
-      <%= f.label "Nùmero telefònico:" %>
-      <%= f.text_field :phone, class: 'form-control' %>
+      <%= f.label "Nùmero telefónico:" %>
+      <%= f.text_field :phone, :required => true, class: 'form-control' %>
       <br>
-      <%= f.hidden_field :status, value: "seleccionado" %>
+      <%= f.hidden_field :status, value: "seleccionado", class: 'form-control' %>
+      <%= f.hidden_field :total,  value: @details.total, class: 'form-control' %>
       <br><br>
-      <%= f.submit "Comprar Paquete", :class => "btn-submit-pack", :total => @details ,data: { confirm: 'Esta usted seguro?' } %>
+      <%= f.check_box :check_box, class: 'col-xs-1' %> Soy mayor de edad
+      <%= f.submit "Comprar Paquete", :class => "btn-submit-pack", :total => @details , data: { confirm: 'Esta usted seguro?' } %>    
     
     <% end %>
-  </div>
+  </div> 
 
-<<<<<<< HEAD
+
 
 <h3 class="text-left col-md-offset-2">Numero de personas:  <%= @details[:persons]%> personas</h3>
 <%if @details[:glass_person]%>
@@ -56,5 +53,3 @@
 
   <h3 class="text-left col-md-offset-2">El total de tu compra es: <%= @total%>.00 mxn</h3>
 
-=======
->>>>>>> c288aab1a0d56fee3403ad6651650cda2c8140ec
