--- a/app/views/packages/index.html.erb
+++ b/app/views/packages/index.html.erb
@@ -4,7 +4,7 @@
 <div class="container">
   <h2 class="text-center">Elige la opciòn deseada y arma tu paquete</h2>
   <br><br><br>
-  <ul class="nav nav-tabs">
+  <ul class="nav nav-tabs ">
     <li class="active"><a data-toggle="tab" href="#home">Paquete Mix</a></li>
     <li><a data-toggle="tab" href="#menu1">Paquete Cerveza</a></li>
     <li><a data-toggle="tab" href="#menu2">Paquete Asado</a></li>
@@ -12,7 +12,7 @@
   <div class="tab-content">
     <div id="home" class="tab-pane fade in active">
       <h3 class="text-center">Arma tu paquete Mix</h3>
-      <div class="col-xs-6 col-md-offset-1">
+      <div class="col-xs-12 col-md-12 col-md-offset-1">
         <%= form_for(@package) do |f| %>
          <%= render 'shared/error_package'%>
      
@@ -44,7 +44,7 @@
     </div>
     <div id="menu1" class="tab-pane fade">
       <h3 class="text-center">Arma tu paquete Cerveza</h3>
-      <div class="col-xs-6 col-md-offset-1">
+      <div class="col-xs-12 col-md-12 col-md-offset-1">
           <%= form_for(@package) do |f| %>
            <%= render 'shared/error_package' %>
      
@@ -66,7 +66,7 @@
     </div>
     <div id="menu2" class="tab-pane fade">
       <h3 class="text-center">Arma tu paquete Asado</h3>
-      <div class="col-xs-6 col-md-offset-1">
+      <div class="col-xs-12 col-md-12 col-md-offset-1">
           <%= form_for(@package) do |f| %>
            <%= render 'shared/error_package' %>
      
