--- a/app/views/partys/index.html.erb
+++ b/app/views/partys/index.html.erb
@@ -12,28 +12,30 @@
 
 
 <div class="div-home ">
-  <%= video_tag("video1.webm", autoplay: true, muted:true, loop: true)%>
-
-  <%= link_to "Elige tu paquete aqui!",  { controller: "packages", action: "index" }, class: "btn btn-lg btn-here center-block" %>
+  <%= link_to "Elige tu paquete aqui!",  { controller: "packages", action: "index" }, class: "btn-here " %>
+  <%= video_tag("01.webm", autoplay: true, muted:true, loop: true)%>
 </div>
 
 <div class="div-packs">
   <div class="container">
-    <h1 class="text-center col-xs-12">Elige un paquete</h1>
-    <div class="col-xs-12">
-      <div class="div-details-packs col-xs-3 col-xs-offset-1">
+    <h1 class="text-center col-xs-12 col-md-12">Elige un paquete</h1>
+    <div class="col-xs-12 col-md-12">
+      <div class="div-details-packs col-xs-10 col-xs-offset-1 col-md-3 col-md-offset-1">
+        <img class="img-packs center-block" src="assets/mix.png">
         <h3 class="text-center">Paquete Mix</h3>
         <p class="text-center">Aquì encontraras los paquetes que son para cotizar tu mix</p>
         <%= link_to "Elige tu paquete aqui!",  { controller: "packages", action: "index" }, class: "btn btn-lg btn-packs center-block" %>
       </div>
       
-      <div class="div-details-packs col-xs-3 col-xs-offset-1">
+      <div class="div-details-packs col-xs-10 col-xs-offset-1 col-md-3 col-md-offset-1">
+        <img class="img-packs center-block" src="assets/beer.png">
         <h3 class="text-center">Paquete Cerveza</h3>
         <p class="text-center">Aquì encontraras los paquetes que son para cotizar tu alcohol</p>
         <%= link_to "Elige tu paquete aqui!",  { controller: "packages", action: "index"}, class: "btn btn-lg btn-packs center-block" %>
       </div>
 
-      <div class="div-details-packs col-xs-3 col-xs-offset-1">
+      <div class="div-details-packs col-xs-10 col-xs-offset-1 col-md-3 col-md-offset-1">
+        <img class="img-packs center-block" src="assets/meat.png">
         <h3 class="text-center">Paquete Asado</h3>
         <p class="text-center">Aquì encontraras los paquetes que son para cotizar tu asado</p>
         <%= link_to "Elige tu paquete aqui!",  { controller: "packages", action: "index" }, class: "btn btn-lg btn-packs center-block" %>
@@ -55,7 +57,7 @@
 
 
 
-<div id="div-gallery" class="col-xs-12 div-gallery container">
+<div class="col-xs-12 col-md-12 div-gallery">
   <br>
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
@@ -70,16 +72,16 @@
       <div class="item active">
         <ul class="gallery-row">
         <li class="">
-            <%= image_tag("02.jpg", onclick: "imgclick()" ,class: "col-xs-3") %>
+            <%= image_tag("01.jpg", onclick: "imgclick()" ,class: "col-xs-3") %>
         </li>
         <li class="">
-            <%= image_tag("02.jpg", onclick: "imgclick()" , class: "col-xs-3") %>
+            <%= image_tag("04.jpg", onclick: "imgclick()" , class: "col-xs-3") %>
         </li>
         <li class="">
-            <%= image_tag("02.jpg", onclick: "imgclick()" , class: "col-xs-3") %>
+            <%= image_tag("05.jpg", onclick: "imgclick()" , class: "col-xs-3") %>
         </li>
         <li class="">
-            <%= image_tag("02.jpg", onclick: "imgclick()" , class: "col-xs-3") %>
+            <%= image_tag("06.jpg", onclick: "imgclick()" , class: "col-xs-3") %>
         </li>
     </ul>
       </div>
@@ -90,13 +92,13 @@
             <%= image_tag("02.jpg", onclick: "imgclick()" , class: "col-xs-3") %>
         </li>
         <li class="">
-            <%= image_tag("02.jpg", onclick: "imgclick()" , class: "col-xs-3") %>
+            <%= image_tag("07.jpg", onclick: "imgclick()" , class: "col-xs-3") %>
         </li>
         <li class="">
-            <%= image_tag("02.jpg", onclick: "imgclick()" , class: "col-xs-3") %>
+            <%= image_tag("08.jpg", onclick: "imgclick()" , class: "col-xs-3") %>
         </li>
         <li class="">
-            <%= image_tag("02.jpg", onclick: "imgclick()" , class: "col-xs-3") %>
+            <%= image_tag("09.jpg", onclick: "imgclick()" , class: "col-xs-3") %>
         </li>
     </ul>
       </div>
@@ -104,16 +106,16 @@
       <div class="item">
         <ul class="gallery-row">
         <li class="">
-            <%= image_tag("02.jpg", onclick: "imgclick()" , class: "col-xs-3") %>
+            <%= image_tag("03.jpg", onclick: "imgclick()" , class: "col-xs-3") %>
         </li>
         <li class="">
-            <%= image_tag("02.jpg", onclick: "imgclick()" , class: "col-xs-3") %>
+            <%= image_tag("10.jpg", onclick: "imgclick()" , class: "col-xs-3") %>
         </li>
         <li class="">
-            <%= image_tag("02.jpg", onclick: "imgclick()" , class: "col-xs-3") %>
+            <%= image_tag("11.jpg", onclick: "imgclick()" , class: "col-xs-3") %>
         </li>
         <li class="">
-            <%= image_tag("02.jpg", onclick: "imgclick()" , class: "col-xs-3") %>
+            <%= image_tag("12.jpg", onclick: "imgclick()" , class: "col-xs-3") %>
         </li>
     </ul>
       </div>
@@ -127,47 +129,33 @@
 
 
 
-<div id="div-about" class="div-about col-xs-12 ">
-  <iframe class="col-xs-offset-1 col-xs-4" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3734.908182579527!2d-101.17793108475776!3d20.5918069079263!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842c84d9a015b219%3A0x1788951ab4955a5f!2sPaseo+de+Las+Playas+140%2C+Las+Reynas%2C+36720+Salamanca%2C+Gto.!5e0!3m2!1ses!2smx!4v1489540331335" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-  <div class="contact col-xs-offset-1 col-xs-4">
-    <h3>Contacto<h3>
+<div class="div-about col-xs-12 col-md-12">
+  <div class="contact col-xs-offset-1 col-xs-10 col-md-offset-2 col-md-8">
+    <h3 class="t-contact">Ponte en contacto con nosotros <h3>
     <%= form_for Contact.new, :html => {:class => 'form-horizontal' } do |f| %>
-<<<<<<< HEAD
-    
-=======
->>>>>>> c288aab1a0d56fee3403ad6651650cda2c8140ec
+    <%= f.label "Asunto:" %>
     <%= f.text_field :name, :required => true, class: 'form-control' %>
+    <%= f.label "Email:" %>
     <%= f.text_field :email, :required => true, class: 'form-control'%>
-    <%= f.text_field :message, :as => :text, :required => true, class:'form-control' %>
+    <%= f.label "Mensaje" %>
+    <%= f.text_area :message, :as => :text, :required => true, :rows => 5, class: 'form-control' %>
     <div class= "hidden">
       <%= f.text_field :nickname, :hint => 'Leave this field blank!' %>
     </div>
     <div>
       </br>
-<<<<<<< HEAD
       <%= f.submit "Enviar Mensaje", class: "btn btn-primary" %>
-    </div>
-=======
-      <%= f.submit 'Send message', :class=> "btn btn-primary" %>
-    
->>>>>>> c288aab1a0d56fee3403ad6651650cda2c8140ec
+    </div>    
   <% end %>
 
   </div>
-   <h5 class="text-center col-xs-12"><strong>Todos los derechos reservados 2017 de Todo para tu fiesta es una marca registrada</strong></h5>
+
+  <iframe class="col-xs-offset-1 col-xs-10" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3734.908182579527!2d-101.17793108475776!3d20.5918069079263!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x842c84d9a015b219%3A0x1788951ab4955a5f!2sPaseo+de+Las+Playas+140%2C+Las+Reynas%2C+36720+Salamanca%2C+Gto.!5e0!3m2!1ses!2smx!4v1489540331335" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+   <h5 class="text-center col-xs-12 col-md-12"><strong>Todos los derechos reservados 2017 de Todo para tu fiesta es una marca registrada</strong></h5>
 
 </div>
-<<<<<<< HEAD
 </div>
-
-
-
-
-=======
-
-
 </div>
->>>>>>> c288aab1a0d56fee3403ad6651650cda2c8140ec
 
 
 
