--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -11,6 +11,8 @@
 
   <form class="col-xs-11 col-xs-offset-0 col-md-4 col-md-offset-2" action="https://compropago.com/comprobante" method="post"><input type="hidden" name="public_key" value="pk_test_7576abf251548f6a62"><input type="hidden" name="product_price" value="<%= Reservation.last.total %>"><input type="hidden" name="product_name" value="Paquete"><input type="hidden" name="product_id" value=""><input type="hidden" name="customer_name" value=""><input type="hidden" name="customer_email" value=""><input type="hidden" name="customer_phone" value=""><input type="hidden" name="image_url" value=""><input type="hidden" name="success_url" value=""><input type="hidden" name="failed_url" value=""><input type="submit" class="btn-payment" value="Oxxo, seven eleven, etc."  border="0" name="submit" alt="Pagar con ComproPago"></form>
 </div>
+<div class="col-md-4">
+</div>
 <br><br><br><br><br>
 
 <h1 class="title">Detalles de tu compra: </h1>
