--- a/app/views/user_mailer/reserv_package.text.erb
+++ b/app/views/user_mailer/reserv_package.text.erb
@@ -1,25 +1,24 @@
 <h1>Todo para tu fiesta</h1>
 
-<p>Numero de pedido:</p>
+Numero de pedido:
 <%= @user.reservations.last.id%> 
 
-<p>Servicio a Nombre de:<p>
+Servicio a Nombre de:
 <%= @user.reservations.last.name%>
 
-<p>Direccion del evento:<p>
+Direccion del evento:
 <%= @user.reservations.last.address%>
 
-<p>Fecha del evento:<p>
+Fecha del evento:
 <%= @user.reservations.last.date%>
 
-<p>Hora del evento:<p>
+Hora del evento:
 <%= @user.reservations.last.time%>
 
-<p>Telefono de contacto:<p>
+Telefono de contacto:
 <%= @user.reservations.last.phone%>
 
-<p>Monto a Pagar:<p>
+Monto a Pagar:
 <%= @user.reservations.last.total%>
 
-<p>GRACIAS POR TU PREFERENCIA!</p>
-
+GRACIAS POR TU PREFERENCIA!
