--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
   <aside class="col-md-4">
     <section class="user_info">
       <h3>
-        <%= @user.name%>
+        <%= @user.reservations%>
       </h3>
     </section>
   </aside>
