--- a/app/views/partys/index.html.erb
+++ b/app/views/partys/index.html.erb
@@ -13,7 +13,7 @@
 
 <div class="div-home ">
   <%= link_to "Elige tu paquete aqui!",  { controller: "packages", action: "index" }, class: "btn-here " %>
-  <%= video_tag("01.webm", autoplay: true, muted:true, loop: true)%>
+  <%= video_tag("01.mp4", autoplay: true, muted:true, loop: true)%>
 </div>
 
 <div class="div-packs">
