--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -96,13 +96,13 @@
   transition:all 500ms ease;
 }
 .social ul li .icon-facebook{
-  background-color: #3b5998;
+  background-image: url("/assets/fonts/401-facebook.png");
 }
 .social ul li .icon-whatsapp{
-  background-color: #34AF23;
+  background-image: url("/assets/fonts/404-whatsapp.png");
 }
 .social ul li .icon-mail2{
-  background-color: #ff4343;
+  background-image: url("/assets/fonts/389-mail2.png");
 }
 
 .social ul li a:hover{
